fix(minor): decreasing underline thickness on mobile

--- a/web/static/index.css
+++ b/web/static/index.css
@@ -105,7 +105,7 @@
     }
 
     .link {
-        @apply transition-all duration-75 underline underline-offset-2 decoration-2 md:hover:decoration-wavy md:hover:underline-offset-4 md:hover:decoration-accent-p font-medium italic
+        @apply transition-all duration-75 underline underline-offset-2 decoration-1 md:decoration-2 md:hover:decoration-wavy md:hover:underline-offset-4 md:hover:decoration-accent-p font-medium italic
     }
 
     .list-anim {
@@ -128,7 +128,7 @@ section {
 }
 
 .blog-li-a {
-    @apply w-fit transition-all duration-75 underline underline-offset-2 decoration-4 md:hover:decoration-wavy md:hover:underline-offset-[6px] md:hover:decoration-accent-p font-black tracking-wide md:tracking-wider leading-snug md:!leading-[1.5] italic text-pretty text-base xs:text-lg md:text-xl xl:text-2xl
+    @apply w-fit transition-all duration-75 underline underline-offset-2 decoration-2 md:decoration-4 md:hover:decoration-wavy md:hover:underline-offset-[6px] md:hover:decoration-accent-p font-black tracking-wide md:tracking-wider leading-snug md:!leading-[1.5] italic text-pretty text-base xs:text-lg md:text-xl xl:text-2xl
 }
 
 #blog {
